# World-Bank-Capstone-Quantitative-Model-Dashboard

./: AGENTS.md  CLAUDE.md  READMEapp.md  app.py  dash_app.py  main.py  pyproject.toml  requirements.txt  requirementsapp.txt  run_dashboard.py  verify_ida20.py  verify_ida21.py
.streamlit/: config.toml
data/: country_map.csv
data/cache/: country_interior_points.json  wdi.csv  wdi_historical.csv
data/processed/: alignment_scores.csv  capacity_scores.csv  master.csv  run_metadata.json
data/raw/: IDA_Contributions.xlsx - IDAReplenishments (1-21).csv  heckman_panel.csv  ida_contributions.csv  ifc_presence.csv  imf_weo.csv  sample_countries.txt
openspec/changes/donor-readiness-index/: design.md  proposal.md  tasks.md
openspec/changes/donor-readiness-index/specs/capacity-scoring/: spec.md
openspec/changes/donor-readiness-index/specs/data-ingestion/: spec.md
openspec/changes/donor-readiness-index/specs/reporting-and-charts/: spec.md
openspec/changes/donor-readiness-index/specs/strategic-alignment-scoring/: spec.md
openspec/changes/dri-model-improvements/: design.md  proposal.md  tasks.md
openspec/changes/dri-model-improvements/specs/composite-dri-score/: spec.md
openspec/changes/ida-donor-prediction-model/: design.md  proposal.md  tasks.md
openspec/changes/interactive-choropleth-world-map/: design.md  proposal.md  tasks.md
outputs/: dri_output.csv  heckman_diagnostics.txt  regression_table.csv  regression_table.txt
scripts/: build_country_map.py  debug_wdi.py
src/: alignment.py  build_panel.py  capacity.py  heckman.py  ingest.py  report.py
(+10 files in other folders)
